cabal-version:      3.6
name:               action-fighter
version:            0.1.0.0

executable action-fighter
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    main-is:          Main.hs
    other-modules:    View, Model, Control
    hs-source-dirs:   src
    build-depends:    base ^>=4.17.2.0
                    , brick
                    , vty
                    , lens
                    , linear
                    , containers



